# algos-labs

./: .gitignore  CMakeLists.txt
lab1/: p3201_mgostev_1005.cpp  p3201_mgostev_1155.cpp  p3201_mgostev_1296.cpp  p3201_mgostev_1401.cpp  p3201_mgostev_2025.cpp
lab2/: p3201_mgostev_1207.cpp  p3201_mgostev_1604.cpp  p3201_mgostev_1726.cpp
lab3/: p3201_mgostev_1067.cpp  p3201_mgostev_1494.cpp  p3201_mgostev_1628.cpp
lab4/: p3201_mgostev_1080.cpp  p3201_mgostev_1160.cpp  p3201_mgostev_1450.cpp
