cmake_minimum_required(VERSION 3.13)
project(algos_labs)

set(CMAKE_CXX_STANDARD 11)

add_executable(lab1_line_fighting lab1/p3201_mgostev_2025.cpp)
add_executable(lab1_heap_of_stones lab1/p3201_mgostev_1005.cpp)
add_executable(lab1_hyper_junp lab1/p3201_mgostev_1296.cpp)
add_executable(lab1_duones lab1/p3201_mgostev_1155.cpp)
add_executable(lab1_players lab1/p3201_mgostev_1401.cpp)